Overflow fix

--- a/src/assets/css/elements/base.css
+++ b/src/assets/css/elements/base.css
@@ -76,6 +76,7 @@ pre {
 	padding-inline-end: 0.75em;
 	box-sizing: content-box;
 	max-width: fit-content;
+	overflow: auto;
 }
 
 blockquote {
